MaterialSkin/HTML/material/html/css/style.css
/* ... */
.icon-grid {
 grid-template-columns:repeat(auto-fit, minmax(64px, 1fr));
}

.thumbnail-grid {
 grid-template-columns:repeat(auto-fit, minmax(80px, 1fr));
}

.thumbnail-grid .none {
 text-align:center;
 vertical-align:middle;
 line-height:var(--std-font-size);
 padding-top:28px;
 border:2px solid var(--text-color);
}

.color-circle {
 width:28px;
 height:28px;
 border-radius:50%;
 margin-top:4px;
 margin-bottom:4px;
 margin-left:2px;
 margin-right:12px;
 cursor:pointer;
}

.color-from-cover {
 background-image: linear-gradient(to right, #c62828, #1976d2, #ff8f00, #455a64);
}

.selected-color-circle {
 width:32px;
 height:32px;
 margin-top:2px;
 margin-bottom:2px;
 margin-right:10px;
 border:3px solid var(--text-color);
}

.thumbnail {
 width:75px;
 height:75px;
 border-radius:5px;
 margin-top:4px;
 margin-bottom:4px;
 margin-left:2px;
 margin-right:12px;
 cursor:pointer;
 opacity:0.25;
}

.selected-thumbnail {
 opacity:1.0;
}

.icon-grid .v-btn {
 width:48px !important;
 height:48px !important;
}

.icon-grid .v-btn .svg-img, .icon-grid .v-btn .v-icon {
 font-size:32px !important;
 width:32px !important;
 height:32px !important;
}

.wrapper {
 display: flex;
}

.mat-icon {
 font-family: "Material Icons";
 vertical-align: bottom;
 margin-left:0px;
 margin-right:2px;
}

.music-note {
 margin-left:-2px;
 margin-right:0px;
}

.grid-btn, .np-emblem, .np-menu, .np-close {
 width:calc(var(--small-icon-size) + 8px);
 height:calc(var(--small-icon-size) + 8px);
 font-size:var(--small-icon-size);
 line-height:var(--small-icon-size);
 border-radius:50%;
 text-align:center;
 font-family: "Material Icons";
 text-decoration:none;
 padding-top:3px;
}
.np-menu, .np-close {
 width:calc(var(--icon-size) + 8px);
 height:calc(var(--icon-size) + 8px);
 font-size:var(--icon-size);
 line-height:var(--icon-size);
 padding-top:4px;
}
.np-emblem {
 padding-top:2px;
}
.np-emblem, .np-menu, .np-close, .np-skip {
 position:absolute;
}

.menu-btn {
 padding-top:6px;
 opacity:var(--sub-opacity);
 font-size:var(--small-icon-size)!important;
 line-height:var(--small-icon-size)!important;
}

#browse-view .lms-list .menu-btn,
.pq-albumstyle .menu-btn {
 padding-top:4px;
}

.lms-list3 .menu-btn {
 padding-top:5px;
}

.list-btn {
 margin-right:calc(-4px + (var(--overlay-sb-pad) * 1.25));
}

.grid-btns {
 position:absolute;
 top:4px!important;
 right:-4px!important;
}

.ps-btns {
 position:absolute;
 top:4px;
 left:16px;
 width:calc(100vw - 32px);
}

.ps-btn {
 position:relative;
 top:calc(var(--top-pad) + 48px);
 right:6px;
 float:right;
 margin-left:12px;
 z-index:5;
 opacity:var(--sub-opacity);
 background:rgba(32, 32, 32, 0.75);
 padding-bottom: 3px;
 width: 32px;
 height: 32px;
}
.ps-btn-mobile {
 top:calc(var(--top-pad) + 6px);
 opacity:1;
}

.grid-btn-left {
 position:absolute;
 top:calc((var(--min-grid-width) - 5px) + (5px * var(--image-grid-factor)) - 26px) !important;
 right:0px!important;
}

.image-grid-with-sub .grid-btn-left {
 bottom:58px!important;
}

.np-menu:after,
.menu-btn:after {
 content:"more_vert";
}

.image-grid-item .grid-btns, .v-list__tile .list-btns, .msk-is-non-touch .image-grid-item .hover-btn, .msk-is-non-touch .text-grid-item .hover-btn, .msk-is-non-touch .v-list__tile .hover-btn, .image-grid-item .grid-btn-left {
 visibility:hidden;
}

.msk-is-non-touch .image-grid-item:hover .grid-btns, .msk-is-non-touch .v-list__tile:hover .list-btns, .msk-is-non-touch .image-grid-item:hover .hover-btn, .msk-is-non-touch .text-grid-item:hover .hover-btn, .msk-is-non-touch .v-list__tile:hover .hover-btn, .msk-is-non-touch .image-grid-item:hover .grid-btn-left {
 visibility:visible;
}

.msk-is-non-touch .list-grid:hover .hover-btn {
 visibility:hidden;
}

.msk-is-non-touch .list-grid .image-grid-item:hover .hover-btn {
 visibility:visible;
}

.list-btns {
 position:absolute;
 top:11.5px !important;
 right:28px !important;
 min-width:132px;
 display:flex;
 justify-content:end;
}

.list-btns-track {
 right:68px !important;
}

.indent-right .list-btns {
 right:88px!important;
}
.indent-right .list-btns-track {
 right:128px!important;
}

.indent-both .list-btns {
 right:188px!important;
}
.indent-both .list-btns-track {
 right:228px!important;
}

.indent-both .lms-image-grid .list-btns {
 right:32px !important;
}

.lms-list .v-list__tile__action .v-btn--icon {
 margin: -2px -6px -2px -6px; /* Is -6px in vuetify, but list-btns messses this up? */
}

.other-btn, .main-btn {
 margin-right:8px;
 float:left;
 padding:0px;
 opacity:0.6;
 width:var(--icon-size);
 height:var(--icon-size);
}

.other-btn {
 margin-right:4px;
}

.list-btns .other-btn {
 margin-right:8px;
}

/*@media (hover: hover) and (pointer: fine) {*/
.msk-is-non-touch .other-btn:hover, .msk-is-non-touch .main-btn:hover,
.msk-is-non-touch .np-emblem:hover {
 opacity:1.0;
}

.msk-is-non-touch .np-menu-fab:hover {
 opacity:1.0;
}
/*}*/

.check-btn {
 color:white;
 background-color:var(--primary-color)!important;
}

.check-btn:after {
 content:"\e835";
}

.check-btn-checked:after {
 content:"\e834";
}

.nd-list .v-list__tile__title {
 white-space:normal!important;
 overflow: hidden;
 display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 2;
}

.nd-list .v-list__tile__title {
 height:unset!important;
 line-height:calc(var(--std-font-size) + 3px);
}

.ellipsis3 {
 white-space:normal!important;
 overflow: hidden;
 display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 3;
}

.v-btn {
 height:calc(var(--icon-size) + 12px);
}

.v-btn--icon {
 width:calc(var(--icon-size) + 12px);
}

.subtoolbar-subtitle small {
 opacity:0.5;
 font-size:100%;
}

.detailed-sub .subtoolbar-subtitle {
 line-height:24px;
 min-height:24px;
 vertical-align: middle;
}

.toolbar-clock {
 position:fixed;
 top:calc(var(--top-pad) + 2px);
 left:calc((100vw - 200px) / 2);
 width:200px;
 text-align:center;
 white-space:nowrap;
 overflow:hidden;
 text-overflow:ellipsis;
}
/* ... */

